# bullet-in

./: .env.example  .gitignore  .gitmessage  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-doc-format.py
.github/: pull_request_template.md
airflow/: requirements.txt
airflow/dags/: bullet_in_daily.py
config/: backtrack.yaml  club_map.yaml  credibility.yaml  glossary.yaml  name_map.yaml  sources.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
docs/: MIGRATION.md
docs/conventions/: 2026-06-11-commit-pr-convention.md
docs/methodology/: 2026-06-11-harness-engineering.html
docs/runbook/: 2026-05-27-airflow-dag-verification.md  (+38 more)
infra/: deploy-site.sh
tests/: test_adapter_base.py  test_adapter_factory.py  test_arsenal_api_adapter.py  test_backfill_body.py  test_backfill_image.py  test_backfill_journalist.py  test_benchmark_cli.py  test_canonical.py  test_collect_fmkorea.py  test_credibility.py  test_dag_import.py  test_dedup.py  test_enrich.py  test_fmkorea_adapter.py  test_guardian_adapter.py  test_html_adapter.py  test_ingest.py  test_mart_row.py  test_meta.py  test_metrics.py  test_models.py  test_mongo_store.py  test_notify.py  test_ops_view.py  test_pipeline.py  test_playwright_adapter.py  test_published_extraction.py  test_quality.py  test_render.py  test_rss_adapter.py  test_score.py  test_serve_layout.py  test_serve_ops.py  test_serve_redesign.py  test_serve_render.py  test_serving_config.py  test_tone.py  test_transfer_stage.py  test_x_adapter.py  test_x_backtrack.py  (+1 more)
(+188 files in other folders)
