[project]
name = "bullet-in"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "httpx[socks]>=0.27",
  "feedparser>=6.0",
  "playwright>=1.44",
  "twikit>=2.0",
  "pymongo>=4.7",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "google-genai>=1.0",
  "jinja2>=3.1",
  "tenacity>=8.3",
  "structlog>=24.1",
  "pyyaml>=6.0",
  "beautifulsoup4>=4.12",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21", "mongomock>=4.1", "dbt-duckdb>=1.8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullet_in"]
